--- a/app/src/main/res/drawable/edit_login.xml
+++ b/app/src/main/res/drawable/edit_login.xml
@@ -2,7 +2,7 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 <item>
     <shape android:shape="rectangle">
-        <solid android:color="@color/xam"/>
+        <solid android:color="@color/gray"/>
         <corners android:radius="10dp"/>
     </shape>
 </item>
