--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,7 +3,7 @@
     <color name="purple_200">#FFBB86FC</color>
     <color name="purple_500">#FF6200EE</color>
     <color name="purple_700">#FF3700B3</color>
-    <color name="teal_200">#E49278</color>
+    <color name="teal_200">#FFC9B8</color>
     <color name="orange_back">#FF9800</color>
     <color name="orange">#FF5A00</color>
     <color name="red">#FF3D00</color>
@@ -12,4 +12,6 @@
     <color name="gray">#676767</color>
     <color name="white">#FFFFFF</color>
     <color name="white_2">#ECECEC</color>
+    <color name="yellow">#FFF9BF</color>
+    <color name="blue">#58B6AE</color>
 </resources>
