--- a/app/src/main/res/layout/product_information.xml
+++ b/app/src/main/res/layout/product_information.xml
@@ -1,105 +1,131 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<androidx.constraintlayout.widget.ConstraintLayout
+  xmlns:android="http://schemas.android.com/apk/res/android"
+  xmlns:app="http://schemas.android.com/apk/res-auto"
+  xmlns:tools="http://schemas.android.com/tools"
+  android:layout_width="match_parent"
+  android:layout_height="match_parent">
 
     <ScrollView
-        android:id="@+id/scrollView3"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+      android:id="@+id/scrollView3"
+      android:layout_width="match_parent"
+      android:layout_height="match_parent"
+      android:background="@color/white">
 
         <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content"
+          android:orientation="vertical">
 
             <TextView
-                android:id="@+id/titleTxt"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="60dp"
-                android:text="Title"
-                android:textAlignment="center"
-                android:textColor="@color/black"
-                android:textSize="24sp"
-                android:textStyle="bold" />
+              android:id="@+id/titleTxt"
+              android:layout_width="match_parent"
+              android:layout_height="wrap_content"
+              android:layout_marginTop="60dp"
+              android:text="Title"
+              android:textAlignment="center"
+              android:textColor="@color/gray"
+              android:textSize="24sp"
+              android:textStyle="bold" />
 
             <TextView
-                android:id="@+id/priceTxt"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="$"
-                android:textAlignment="center"
-                android:textColor="@color/orange"
-                android:textSize="24sp" />
+              android:id="@+id/priceTxt"
+              android:layout_width="match_parent"
+              android:layout_height="wrap_content"
+              android:textAlignment="center"
+              android:textColor="@color/orange"
+              android:textSize="24sp"
+              tools:text="$300" />
 
             <ImageView
-                android:id="@+id/foodPic"
-                android:layout_width="match_parent"
-                android:layout_height="300dp"
-                app:srcCompat="@drawable/burger" />
+              android:id="@+id/foodPic"
+              android:layout_width="match_parent"
+              android:layout_height="300dp"
+              tools:src="@drawable/burger" />
 
             <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:gravity="center"
-                android:orientation="horizontal">
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:gravity="center"
+              android:orientation="horizontal">
 
                 <ImageView
-                    android:id="@+id/minusBtn"
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
+                  android:id="@+id/minusBtn"
+                  android:layout_width="30dp"
+                  android:layout_height="30dp"
 
-                    app:srcCompat="@drawable/minus" />
+                  app:srcCompat="@drawable/minus" />
 
                 <TextView
-                    android:id="@+id/numberOrderTxt"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="16dp"
-                    android:layout_marginEnd="16dp"
-                    android:text="1"
-                    android:textAlignment="center"
-                    android:textColor="@color/black"
-                    android:textSize="18sp"
-                    android:textStyle="bold" />
+                  android:id="@+id/numberOrderTxt"
+                  android:layout_width="wrap_content"
+                  android:layout_height="wrap_content"
+                  android:layout_marginStart="16dp"
+                  android:layout_marginEnd="16dp"
+                  android:text="1"
+                  android:textAlignment="center"
+                  android:textColor="@color/black"
+                  android:textSize="18sp"
+                  android:textStyle="bold" />
 
                 <ImageView
-                    android:id="@+id/plusBtn"
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
+                  android:id="@+id/plusBtn"
+                  android:layout_width="30dp"
+                  android:layout_height="30dp"
 
-                    app:srcCompat="@drawable/plus" />
+                  app:srcCompat="@drawable/plus" />
 
             </LinearLayout>
 
-            <TextView
-                android:id="@+id/descriptionTxt"
-                android:layout_width="wrap_content"
-                android:layout_height="23dp"
-                android:layout_margin="16dp"
-                android:layout_weight="1"
-                android:text="Description"
-                android:textColor="@color/black"
-                android:textSize="20sp"
-                android:textStyle="bold" />
+            <LinearLayout
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:orientation="vertical">
+
+                <TextView
+                  android:id="@+id/textView5"
+                  android:layout_width="wrap_content"
+                  android:layout_height="23dp"
+                  android:layout_margin="16dp"
+                  android:layout_weight="1"
+                  android:text="Description"
+                  android:textColor="@color/orange"
+                  android:textSize="20sp"
+                  android:textStyle="bold" />
+
+                <TextView
+                  android:id="@+id/descriptionTxt"
+                  android:layout_width="wrap_content"
+                  android:layout_height="wrap_content"
+                  android:layout_marginHorizontal="16dp"
+                  android:layout_weight="1"
+                  android:textColor="@color/gray"
+                  android:textSize="14sp"
+                  tools:text="@tools:sample/lorem/random" />
+
+                <View
+                  android:layout_width="match_parent"
+                  android:layout_height="?actionBarSize"
+                  android:layout_marginBottom="20dp"/>
+            </LinearLayout>
+
         </LinearLayout>
     </ScrollView>
 
     <TextView
-        android:id="@+id/textView15"
-        android:layout_width="0dp"
-        android:layout_height="50dp"
-        android:layout_margin="16dp"
-        android:text="Add to card"
-        android:background="@drawable/orange_bt_background"
-        android:gravity="center"
-        android:textColor="@color/white"
-        android:textSize="23sp"
-        android:textStyle="bold"
-        android:elevation="3dp"
-        app:layout_constraintBottom_toBottomOf="@+id/scrollView3"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+      android:id="@+id/textView15"
+      android:layout_width="0dp"
+      android:layout_height="50dp"
+      android:layout_margin="16dp"
+      android:background="@drawable/orange_bt_background"
+      android:elevation="3dp"
+      android:gravity="center"
+      android:text="Add to card"
+      android:textColor="@color/white"
+      android:textSize="23sp"
+      android:textStyle="bold"
+      app:layout_constraintBottom_toBottomOf="@+id/scrollView3"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintStart_toStartOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
