--- a/app/src/main/res/layout/viewholder_popular.xml
+++ b/app/src/main/res/layout/viewholder_popular.xml
@@ -1,82 +1,86 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_margin="10dp"
-    android:background="@drawable/card_background"
-    android:elevation="3dp">
+<RelativeLayout
+  xmlns:android="http://schemas.android.com/apk/res/android"
+  xmlns:app="http://schemas.android.com/apk/res-auto"
+  xmlns:tools="http://schemas.android.com/tools"
+  android:layout_width="wrap_content"
+  android:layout_height="wrap_content"
+  android:layout_margin="10dp"
+  android:background="@drawable/card_background"
+  android:elevation="3dp">
 
     <ImageView
-        android:id="@+id/pic"
-        android:layout_width="120dp"
-        android:layout_height="120dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/title"
-        app:srcCompat="@drawable/dog_1" />
+      android:id="@+id/categoryPic"
+      android:layout_width="150dp"
+      android:layout_height="120dp"
+      android:layout_alignParentTop="true"
+      android:layout_marginHorizontal="8dp"
+      android:layout_marginTop="8dp"
+      android:scaleType="centerCrop"
+      tools:src="@drawable/dog_1" />
 
     <TextView
-        android:id="@+id/title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="4dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="4dp"
-        android:gravity="center"
-        android:text="Title"
-        android:textAlignment="center"
-        android:textColor="@color/black"
-        android:textSize="14sp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+      android:id="@+id/categoryName"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_below="@id/categoryPic"
+      android:layout_centerHorizontal="true"
+      android:layout_marginStart="4dp"
+      android:layout_marginEnd="4dp"
+      android:gravity="center"
+      android:text="Title"
+      android:textAlignment="center"
+      android:textColor="@color/gray"
+      android:textSize="18sp"
+      android:textStyle="bold"
+      android:minLines="2"
+      android:maxLines="2"
+      tools:layout_editor_absoluteY="24dp" />
 
-    <TextView
-        android:id="@+id/fee"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="0.0"
-        android:textColor="@color/black"
-        android:textSize="18sp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/pic" />
+    <LinearLayout
+      android:id="@+id/feeFull"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_below="@id/categoryName"
+      android:layout_centerHorizontal="true"
+      android:orientation="horizontal">
 
-    <TextView
-        android:id="@+id/textView11"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="3dp"
-        android:text="$"
-        android:textColor="@color/red"
+        <TextView
+          android:id="@+id/textView11"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:layout_marginEnd="3dp"
+          android:text="$"
+          android:textColor="@color/red" />
 
-        app:layout_constraintBottom_toBottomOf="@+id/fee"
-        app:layout_constraintEnd_toStartOf="@+id/fee"
-        app:layout_constraintTop_toBottomOf="@+id/pic" />
+        <TextView
+          android:id="@+id/categoryPrice"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:text="0.0"
+          android:textColor="@color/gray"
+          android:textSize="15sp"
+          android:textStyle="bold"
+          app:layout_constraintEnd_toEndOf="parent"
+          app:layout_constraintStart_toStartOf="parent"
+          app:layout_constraintTop_toBottomOf="@+id/categoryPic" />
+    </LinearLayout>
 
-    <TextView
-        android:id="@+id/addBtn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="8dp"
-        android:background="@drawable/hight_orange_back"
-        android:paddingStart="10dp"
-        android:paddingTop="3dp"
-        android:paddingEnd="10dp"
-        android:paddingBottom="3dp"
-        android:text="+ Add"
-        android:textColor="@color/black"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/fee" />
+    <Button
+      android:id="@+id/addBtn"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_below="@id/feeFull"
+      android:layout_centerHorizontal="true"
+      android:layout_marginStart="8dp"
+      android:layout_marginTop="8dp"
+      android:layout_marginEnd="8dp"
+      android:layout_marginBottom="8dp"
+      android:backgroundTint="@color/orange_back"
+      android:padding="-200dp"
+      android:text="+ Add"
+      android:textColor="@color/white"
+      android:textSize="14sp"
+      android:textStyle="bold" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</RelativeLayout>
