--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -78,7 +78,7 @@
                     android:drawableStart="@drawable/search_back"
                     android:drawablePadding="10dp"
                     android:ems="10"
-                    android:hint="Find Your Foot"
+                    android:hint="Find Your Food"
                     android:inputType="textPersonName"
                     android:minHeight="48dp"
                     android:paddingStart="20dp"
@@ -168,7 +168,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="32dp"
                     android:layout_marginTop="24dp"
-                    android:text="Quick view"
+                    android:text="Categories"
                     android:textColor="@color/black"
                     android:textSize="20sp"
                     android:textStyle="bold"
@@ -295,7 +295,7 @@
                     android:id="@+id/homeTx"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="@string/app_name"
+                    android:text="Home"
                     android:textAlignment="center"
                     android:textColor="@color/gray"
                     android:textSize="14sp" />
@@ -321,7 +321,7 @@
                     android:id="@+id/profileTx"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="@string/app_name"
+                    android:text="Profile"
                     android:textAlignment="center"
                     android:textColor="@color/gray"
                     android:textSize="14sp" />
