--- a/app/src/main/res/layout/activity_model.xml
+++ b/app/src/main/res/layout/activity_model.xml
@@ -7,10 +7,10 @@
     tools:context=".views.ModelActivity">
 
     <Button
-        android:id="@+id/upload"
+        android:id="@+id/Camera"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="upload"
+        android:text="Camera"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/recommend"
         app:layout_constraintHorizontal_bias="0.5"
@@ -23,7 +23,7 @@
         android:layout_height="332dp"
         android:scaleType="centerCrop"
         android:src="@drawable/background_intro"
-        app:layout_constraintBottom_toTopOf="@+id/upload"
+        app:layout_constraintBottom_toTopOf="@+id/Camera"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -49,7 +49,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/gallery"
         app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/upload"
+        app:layout_constraintStart_toEndOf="@+id/Camera"
         app:layout_constraintTop_toBottomOf="@+id/imageView" />
     <TextView
         android:id="@+id/detect"
@@ -57,7 +57,7 @@
         android:layout_height="70dp"
         android:hint="Detect"
         android:textSize="40dp"
-        app:layout_constraintBottom_toTopOf="@+id/upload"
+        app:layout_constraintBottom_toTopOf="@+id/Camera"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
