--- a/app/src/main/res/layout/product_information.xml
+++ b/app/src/main/res/layout/product_information.xml
@@ -53,20 +53,21 @@
                   android:id="@+id/minusBtn"
                   android:layout_width="30dp"
                   android:layout_height="30dp"
-
                   app:srcCompat="@drawable/minus" />
 
-                <TextView
+                <EditText
                   android:id="@+id/numberOrderTxt"
-                  android:layout_width="wrap_content"
+                  android:layout_width="64dp"
                   android:layout_height="wrap_content"
                   android:layout_marginStart="16dp"
                   android:layout_marginEnd="16dp"
+                  android:inputType="number"
                   android:text="1"
                   android:textAlignment="center"
                   android:textColor="@color/black"
                   android:textSize="18sp"
-                  android:textStyle="bold" />
+                  android:textStyle="bold"
+                  tools:text="999" />
 
                 <ImageView
                   android:id="@+id/plusBtn"
@@ -120,7 +121,7 @@
       android:background="@drawable/orange_bt_background"
       android:elevation="3dp"
       android:gravity="center"
-      android:text="Add to card"
+      android:text="Add to cart"
       android:textColor="@color/white"
       android:textSize="23sp"
       android:textStyle="bold"
